--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=/" />
+    <meta charset="UTF-8" />
+    <script>
+      // Guarda la ruta original antes de redirigir
+      const redirectPath = window.location.pathname + window.location.search + window.location.hash;
+      sessionStorage.setItem("redirect-path", redirectPath);
+      window.location.replace("/");
+    </script>
   </head>
   <body></body>
 </html>
