--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/tb-favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EVPYXEN193"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-EVPYXEN193');
+    </script>
     <script>
       const savedPath = sessionStorage.getItem("redirect-path");
       if (savedPath) {
