Add OG and Twitter metadata in index.html to improve link previews on social platforms

--- a/index.html
+++ b/index.html
@@ -2,15 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- Open Graph meta tags -->
+    <meta property="og:title" content="TuneBridge - Discover. Connect. Create." />
+    <meta property="og:description" content="Discover, follow, and collaborate with musicians around the world." />
+    <meta property="og:image" content="https://www.tunebridge.net/TuneBridge.jpg" />
+    <meta property="og:url" content="https://www.tunebridge.net" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="TuneBridge" />
+
+    <!-- Twitter Card meta tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="TuneBridge - Discover. Connect. Create." />
+    <meta name="twitter:description" content="Discover, follow, and collaborate with musicians around the world." />
+    <meta name="twitter:image" content="https://www.tunebridge.net/TuneBridge.jpg" />
+
     <!-- Preconnect to Supabase public API -->
     <link rel="preconnect" href="https://edgpkwkuthuzwponovim.supabase.co" />
+
+    <!-- Favicon images -->
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="manifest" href="favicon/site.webmanifest">
+
     <link rel="preload" as="image" href="/heroImage.webp" fetchpriority="high">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+    <link rel="canonical" href="https://www.tunebridge.net" />
+    
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-EVPYXEN193"></script>
     <script>
